# mac

./: CMakeLists.txt  Info.json  Languages.json  README.md  SupportedDevices.json  fixer.py  fixer.yaml  generate_sources.py
.github/workflows/: build-apple-apps.yml  build-current-CMake.yml  change-source-CMakeLists.yml
src/: README.md
src/iOS/: DummyClass.h  DummyClass.m  Info.plist  main.cpp
src/iOSAddons/: PLEASEREADMEIOS.md
src/iOSAddons/Dylibs/: .txt
src/iOSAddons/Frameworks/: .txt
